# k34cover

./: .gitignore  LICENSE  README.md  assign_diagonal.py  bibd.py  bibd4.py  check_cover.py  gdd45_m4.py  k3k4cover.py  k3k4cover.xlsx  main.py  my_report1.txt  pg2.py  pyproject.toml  r_picker.py  run_u45_check.py  transversal.py  verify_bibd.py  verify_bibd_detailed.py  verify_gdd_45.py
k34cover/: cli.py  cover.py  verify.py
k34cover.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
k34cover/designs/: bibd4.py  gdd45_m4.py  pg2.py  transversal.py
